fix spacing on greeting

--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -876,6 +876,7 @@ article {
 .greeting h1 {
   font-size: 1.8rem;
   font-weight: 400;
+  margin: 0;
 }
 
 .recent {
