--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -83,6 +83,7 @@
   h1 {
     font-size: 1.8rem;
     font-weight: 400;
+    margin: 0;
   }
 }
 
